--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -7,7 +7,7 @@ $gray-1: #ececec;
 $gray-2: #F6F6F6;
 
 // Brand colors
-$teal: #30E3CA;
+$teal: #5EF3E7;
 $teal-dark: #008489;
 $teal-light: #E4F9F5;
 $green: #40514E;
