--- a/src/stories/components/Button/styles.scss
+++ b/src/stories/components/Button/styles.scss
@@ -12,7 +12,8 @@
   font-family: $header-font-family;
   font-size: $font-size-sm;
   font-weight: 700;
-  padding: $spacing-2 $spacing-6;
+  line-height: $line-height-loose;
+  padding: $spacing-1 $spacing-4;
   text-decoration: none;
   text-transform: capitalize;
   transition: all 0.4s cubic-bezier(0.5,0.25,0,1);
