[SIE-12] new Wizard component

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -2,9 +2,10 @@
 // Colors
 
 $black: #212121;
-$white: #fffff7;
+$white: #ffffff;
 $gray-1: #ececec;
 $gray-2: #F6F6F6;
+$gray-3: #CCCCCC;
 
 // Brand colors
 $teal: #5EF3E7;
