--- a/src/stories/layouts/Wizard/styles.scss
+++ b/src/stories/layouts/Wizard/styles.scss
@@ -5,8 +5,12 @@
 
 .wizard {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   grid-gap: $spacing-5;
+  
+  @include bp-tablet-lg {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .wizard__controls {
