--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,7 +1,7 @@
 // @file
 // Mixins
 
-// remove broswer default styles
+// remove browser default styles
 @mixin button-clear() {
   &[type='button'] {
     appearance: none;
