--- a/src/stories/components/HorizontalTitle/styles.scss
+++ b/src/stories/components/HorizontalTitle/styles.scss
@@ -5,41 +5,41 @@
 
 .horizontal-title {
     font-family: 'Work Sans';
-    padding-top: 0;
-    margin-top: 0;
+
+    @include bp-tablet-lg {
+        grid-gap: $spacing-3;
+        display: flex;
+        flex-direction: row;
+    }
+
+    @include bp-desktop {
+        gap: $spacing-5;
+    }
 
     &--medium {
-        .horizontal-title__title {
-            font-size: 20px;
+        .horizontal-title__content {
+            font-size: $font-size-lg;
         }
     }
+
     &--large {
-        .horizontal-title__title {
-            font-size: 24px;
+        .horizontal-title__content {
+            font-size: rem(24px);
         }
     }
 }
 
 .horizontal-title__title {
-    font-size: 16px;
     padding-top: 0;
     margin-top: 0;
-    padding-bottom: 10px;
-    margin-bottom: 30px;
+    padding-right: $spacing-1;
+    margin-right: $spacing-3;
 }
 
 .horizontal-title__eyebrow {
-    font-family: 'Work Sans';
-    font-size: 13px;
+    font-size: rem(13px);
     text-transform: uppercase;
     letter-spacing: 1px;
-    padding-bottom: 0px;
-    margin: 0px;
-}
-
-.horizontal-title__content {
-    padding-top: 10px;
-    margin-top: 0;
 }
 
 
