--- a/src/stories/components/Card/styles.scss
+++ b/src/stories/components/Card/styles.scss
@@ -2,3 +2,30 @@
 
 // @file
 // Card
+
+.card
+{
+    background-color: $teal-light;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.card-container
+{
+    padding: 10px;
+}
+
+.card--active
+{
+
+}
+
+.card--inactive
+{
+
+}
+
+.card--teaser
+{
+
+}
