--- a/src/stories/components/Steps/styles.scss
+++ b/src/stories/components/Steps/styles.scss
@@ -41,10 +41,10 @@ $step-size: 52px;
       border-radius: 3px;
       content: '';
       display: block !important;
-      height: 46px;
+      height: 50px;
       left: calc(( - 3px) / 2);
       position: absolute;
-      top: 100%;
+      top: calc(100% - 3px);
       width: 3px;
       z-index: -2;
     }
@@ -62,7 +62,7 @@ $step-size: 52px;
   &.is-active {
     
     &::after {
-      height: 23px;
+      height: 25px;
       transition-delay: 0.8s;
     }
   }
@@ -70,7 +70,7 @@ $step-size: 52px;
   // style visited step
   &.has-been-visited {
     &::after {
-      height: 40px;
+      height: 50px;
     }
   }
 }
@@ -82,6 +82,7 @@ $step-size: 52px;
   overflow: hidden;
   position: relative;
   width: $step-size;
+  z-index: 1;
 
   &::before,
   &::after {
