--- a/src/stories/layouts/Grid/styles.scss
+++ b/src/stories/layouts/Grid/styles.scss
@@ -3,14 +3,11 @@
 // @file
 // Grid
 
-%shared {
+.grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-column-gap: rem(15px);
-}
 
-.grid {
-    @extend %shared;
     @include bp-tablet {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -25,32 +22,39 @@
     }
 }
 
-.grid--one {
-    @extend %shared;
+.grid--1-col {
     grid-template-columns: repeat(1, 1fr);
 }
 
-.grid--two {
-    @extend %shared;
-    grid-template-columns: repeat(2, 1fr);
+.grid--2-col {
+    @include bp-tablet {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
-.grid--three {
-    @extend %shared;
-    grid-template-columns: repeat(3, 1fr);
+.grid--3-col {
+    @include bp-tablet {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include bp-tablet-lg {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
-.grid--four {
-    @extend %shared;
-    grid-template-columns: repeat(4, 1fr);
+.grid--4-col {
+    @include bp-tablet {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include bp-tablet-lg {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @include bp-desktop {
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: $spacing-3;
+    }
 }
-
-.grid__item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
 
 
