--- a/src/stories/layouts/Grid/styles.scss
+++ b/src/stories/layouts/Grid/styles.scss
@@ -6,24 +6,7 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-column-gap: rem(15px);
-
-    @include bp-tablet {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    @include bp-tablet-lg {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
-    @include bp-desktop {
-        grid-template-columns: repeat(4, 1fr);
-        grid-column-gap: $spacing-3;
-    }
-}
-
-.grid--1-col {
-    grid-template-columns: repeat(1, 1fr);
+    gap: rem(#{$spacing-3 / 2});
 }
 
 .grid--2-col {
@@ -49,11 +32,11 @@
 
     @include bp-tablet-lg {
         grid-template-columns: repeat(3, 1fr);
+        gap: $spacing-3;
     }
 
     @include bp-desktop {
         grid-template-columns: repeat(4, 1fr);
-        grid-column-gap: $spacing-3;
     }
 }
 
