[SIE-9] add dropdown select

--- a/src/stories/components/FormItem/styles.scss
+++ b/src/stories/components/FormItem/styles.scss
@@ -46,8 +46,10 @@
   }
 }
 
+// global form input styles
 %form-item-styles {
   appearance: none;
+  background-color: transparent;
   border: solid 1px $black;
   box-shadow: 0;
   font-size: $base-font-size;
