--- a/src/stories/layouts/Grid/styles.scss
+++ b/src/stories/layouts/Grid/styles.scss
@@ -6,7 +6,7 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    gap: rem(#{$spacing-3 / 2});
+    gap: calc(#{$spacing-3} / 2);
 }
 
 .grid--2-col {
