--- a/src/stories/layouts/Sidebar/styles.scss
+++ b/src/stories/layouts/Sidebar/styles.scss
@@ -3,11 +3,12 @@
 // @file
 // Sidebar
 $sidebar-width: rem(300px);
+
 .sidebar {
     @include bp-tablet-lg {
         display: grid;
         grid-template-columns: repeat(2, $sidebar-width auto);
-        gap: rem(#{$spacing-5 / 2});
+        gap: calc(#{$spacing-5} / 2);
     }
     
     @include bp-desktop {
