[SIE-9] update styles

--- a/src/stories/components/FormItem/styles.scss
+++ b/src/stories/components/FormItem/styles.scss
@@ -96,9 +96,11 @@
 }
 
 .form-item__input--textarea {
+  height: rem(300px);
+  padding-bottom: $spacing-2;
+  padding-top: $spacing-2;
+
   &[type='textarea'] {
     appearance: none;
   }
-
-  height: rem(300px);
 }
