--- a/src/stories/components/Button/styles.scss
+++ b/src/stories/components/Button/styles.scss
@@ -4,6 +4,8 @@
 // Button
 
 .button {
+  @include button-clear;
+
   background-color: $black;
   border-bottom-right-radius: 50px;
   border-top-left-radius: 50px;
@@ -19,7 +21,7 @@
   text-decoration: none;
   text-transform: capitalize;
   transition: all 0.4s cubic-bezier(0.5,0.25,0,1);
-  
+
   &:visited {
     color: $teal-light;
   }
@@ -48,7 +50,7 @@
 // Secondary button
 .button--secondary {
   background-color: $teal-dark;
-  
+
   &:visited {
     color: $teal-light;
   }
@@ -68,7 +70,7 @@
 .button--tertiary {
   background-color: $teal;
   color: $black;
-  
+
   &:visited {
     color: $green;
   }
@@ -88,7 +90,7 @@
 .button--quaternary {
   background-color: $teal-light;
   color: $black;
-  
+
   &:visited {
     color: $green;
   }
