--- a/src/stories/components/Form/styles.scss
+++ b/src/stories/components/Form/styles.scss
@@ -3,18 +3,10 @@
 // @file
 // Form
 
-.form__container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    padding: 0 0 $spacing-1;
-}
-
-.form__item {
-    flex-basis: 100%;
+form#customForm div {
     margin: 0 0 $spacing-2;
 }
 
 .form__button {
-    margin: 0 0 $spacing-2;
+    text-align: right;
 }
