[SIE-9] update Teaser styles

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -6,6 +6,8 @@ $white: #ffffff;
 $gray-1: #ececec;
 $gray-2: #F6F6F6;
 $gray-3: #CCCCCC;
+$gray-4: #666;
+$gray-5: #333;
 
 // Brand colors
 $teal: #5EF3E7;
