--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -123,8 +123,8 @@ hr {
 
 a {
   color: $black;
-  text-decoration: none;
-  
+  font-weight: 700;
+
   &:visited {
     color: $green;
   }
@@ -133,7 +133,7 @@ a {
   &:focus {
     text-decoration: none;
   }
-  
+
   &:active {
     color: $black;
   }
