--- a/src/stories/components/Branding/styles.scss
+++ b/src/stories/components/Branding/styles.scss
@@ -9,6 +9,7 @@
   font-family: $header-font-family;
   align-items: center;
   display: inline-flex;
+  text-decoration: none;
 }
 
 .branding__logo {
