[SIE-16] update font weight on teaser

--- a/src/stories/components/Teaser/styles.scss
+++ b/src/stories/components/Teaser/styles.scss
@@ -8,8 +8,9 @@
     border-width: 0 0 rem(1px) 0;
     color: $black;
     display: block;
-    font-size: $font-size-sm;
     font-family: $base-font-family;
+    font-size: $font-size-sm;
+    font-weight: 400;
     line-height: $line-height-loose;
     padding: $spacing-1 $spacing-5 $spacing-1 $spacing-2;
     position: relative;
