[SIE-21] add box shadows

--- a/src/stories/components/Card/styles.scss
+++ b/src/stories/components/Card/styles.scss
@@ -6,7 +6,7 @@
 .card
 {
     border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-bottom-style: solid;
     border-color: $teal-dark;
 }
