--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -15,6 +15,19 @@ $teal-dark: #008489;
 $teal-light: #E4F9F5;
 $green: #40514E;
 
+// Utility colors
+// error
+$red: #FFE2E2;
+$red-dark: #FF4141;
+
+// warning
+$yellow: #FFFADF;
+$yellow-dark: #FFB641;
+
+// success
+$green: $teal-light;
+$green-dark: $teal-dark;
+
 // Gradients
 $gradient-teal: linear-gradient(to top, #30E3CA, $teal);
 $gradient-teal-light: linear-gradient(to top, #DBF0EC, $teal-light);
