--- a/src/stories/layouts/Scrollable/styles.scss
+++ b/src/stories/layouts/Scrollable/styles.scss
@@ -9,21 +9,20 @@
     border-color: $gray-3;
     border-style: solid;
     padding: $spacing-2;
-    height: 100%;
+    height: rem(400px);
 
     &::-webkit-scrollbar {
         visibility: hidden;
         width: 6px;
     }
-    
+
 
     &::-webkit-scrollbar-thumb {
-        background: $teal-dark;
+        background: $teal;
         border-radius: 5px;
     }
-}
 
-// only used for the stories to set a height to the parent
-.test__parent {
-    height:200px
+    @include bp-tablet {
+        height: rem(600px);
+    }
 }
