[SIE-35] fix styles on various components

--- a/src/stories/components/FormItem/styles.scss
+++ b/src/stories/components/FormItem/styles.scss
@@ -73,6 +73,15 @@
 
 .form-item__input {
   @extend %form-item-styles;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:invalid {
+    border-color: $red-dark;
+    box-shadow: none;
+  }
 }
 
 .form-item__input--text {
