--- a/src/stories/components/Button/styles.scss
+++ b/src/stories/components/Button/styles.scss
@@ -97,8 +97,7 @@
 
   &:hover,
   &:focus {
-    background-color: $teal-dark;
-    color: $teal-light;
+    background-color: $teal;
   }
 
   &:active {
