[SIE-51] add ImageGuidelines to WebcamControls

--- a/src/stories/components/ImageGuidelines/styles.scss
+++ b/src/stories/components/ImageGuidelines/styles.scss
@@ -5,8 +5,8 @@
 
 .image-guidelines {
   background-color: $teal-light;
-  display: inline-block;
   height: 240px;
+  margin-bottom: $spacing-3;
   position: relative;
   width: 320px;
 
