--- a/src/stories/components/WebcamControls/styles.scss
+++ b/src/stories/components/WebcamControls/styles.scss
@@ -11,23 +11,14 @@
 
 .webcam-controls__buttons {
   margin-top: $spacing-3;
+}
 
-  .button {
-    &:last-child {
-      float: right;
-    }
-
-    &.is-disabled {
-      color: $gray-4;
-      background-color: $gray-3;
-      cursor: text;
-
-      &:hover,
-      &:focus {
-        border-radius: 0;
-        border-bottom-right-radius: 50px;
-        border-top-left-radius: 50px;
-      }
-    }
-  }
+.webcam-controls__images {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: $spacing-5;
+  font-size: $font-size-sm;
+  margin: $spacing-3 auto 0;
+  max-width: rem(690px);
+  text-align: center;
 }
