--- a/src/stories/components/Button/styles.scss
+++ b/src/stories/components/Button/styles.scss
@@ -20,7 +20,7 @@
   text-align: center;
   text-decoration: none;
   text-transform: capitalize;
-  transition: all 0.4s cubic-bezier(0.5,0.25,0,1);
+  transition: all 0.4s cubic-bezier(0.5, 0.25, 0, 1);
 
   &:visited {
     color: $teal-light;
