--- a/src/stories/components/ToggleCamera/styles.scss
+++ b/src/stories/components/ToggleCamera/styles.scss
@@ -5,19 +5,21 @@
 
 .toggle-camera {
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: auto auto;
   gap: $spacing-3;
-  margin: $spacing-3 0;
+  margin: $spacing-6 0;
 }
 
 .toggle-camera__half {
+  padding: $spacing-1 0 0;
+
   &:first-child {
     @include svg-background(icon-camera);
 
     background-position: top left;
     background-repeat: no-repeat;
     background-size: rem(55px);
-    padding: $spacing-1 0  0 $spacing-7;
+    padding-left: $spacing-7;
   }
 }
 
@@ -29,28 +31,41 @@
   @include button-clear();
 
   background-color: $gray-3;
-  border-radius: 32px;
-  height: 32px;
+  color: $gray-5;
+  border-radius: 42px;
+  font-family: $header-font-family;
+  font-size: $font-size-sm;
+  font-weight: 700;
+  height: 42px;
+  letter-spacing: 1px;
+  padding-left: 40px;
   position: relative;
-  width: 62px;
+  text-transform: uppercase;
+  transition: none;
+  transition: background 0.4s cubic-bezier(0.5, 0.25, 0, 1);
+  width: 82px;
 
-  &::before {
+  &::after {
     background-color: $white;
     border-radius: 100%;
     content: '';
     display: block;
-    height: 30px;
+    height: 40px;
     left: 1px;
     position: absolute;
     top: 1px;
     transition: all 0.4s cubic-bezier(0.5, 0.25, 0, 1);
-    width: 30px;
+    width: 40px;
   }
 
   &.is-on {
     background-color: $teal-dark;
-    &::before {
-      transform: translateX(30px);
+    color: $teal-light;
+    padding-left: 0;
+    padding-right: 40px;
+
+    &::after {
+      transform: translateX(40px);
     }
   }
 }
